# SagaEngine

./: .clang-format  .clang-tidy  .dockerignore  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  CMakelists.txt  CONTRIBUTING.md  CodingStandards.md  Dockerfile  Dockerfile.test  ENGINE.MD  LICENSE  LICENSE.md  LICENSE_POLICY.toml  LICENSE_TEXT_SOURCES.toml  README.md  ROADMAP.md  SAGA_PHASE_VERIFICATION_AND_LINUX_DISTRIBUTION_CONTRACT.md  SHA256SUMS  TEMP.MD  Thirdparty.md  bootstrap.ps1  build.bat  build.ps1  build.sh  conanfile.py  docker-compose.test.yml  engine_bundle.txt  errors.txt  export.sh  forge.toml  not.txt  shell.nix  version.json
.github/: MAINTENANCE.md  (+1 more)
Tests/Contract/InstalledConsumer/SagaGraphicsInstalledConsumerProject/: CMakeLists.txt  main.cpp
Tools/Forge/: CHANGELOG.md  CMakeLists.txt  FORGE_ROADMAP.md  LICENSE  README.md  SCHEMA.md  build.py
Tools/Forge/.github/workflows/: ci.yml
Tools/Forge/cmake/modules/: SagaAssets.cmake  SagaTargets.cmake  SagaTests.cmake  SagaThirdparty.cmake
Tools/Forge/examples/hello-cmake/: CMakeLists.txt  README.md  forge.toml
Tools/Forge/examples/hello-cmake/src/: main.cpp
Tools/Forge/examples/raylib-conan/: CMakeLists.txt  README.md  forge.toml
Tools/Forge/examples/raylib-conan/src/: main.cpp
Tools/Forge/include/Forge/: BuildModel.h  BuildScheduler.h  CMakeAdapter.h  ConanAdapter.h  ExitCode.h  Manifest.h
Tools/Forge/include/Forge/Adapters/: ExternalGateAdapter.hpp
Tools/Forge/include/Forge/Diagnostics/: DiagnosticCollector.hpp  ForgeDiagnostic.hpp
Tools/Forge/include/Forge/Pipeline/: BuildPlan.hpp  BuildPlanner.hpp
Tools/Forge/include/Forge/Reports/: BuildReport.hpp  BuildReportBuilder.hpp  BuildReportWriter.hpp
Tools/Forge/profiles/: windows-msvc
Tools/Forge/src/: BuildModel.cpp  BuildScheduler.cpp  CMakeAdapter.cpp  ConanAdapter.cpp  EnvProbe.cpp  ExitCode.cpp  ToolEnv.cpp  main.cpp
Tools/Forge/src/Adapters/: ExternalGateAdapter.cpp
Tools/Forge/src/Diagnostics/: DiagnosticCollector.cpp
Tools/Forge/src/Pipeline/: BuildPlanner.cpp
Tools/Forge/src/Reports/: BuildReportBuilder.cpp  BuildReportWriter.cpp
Tools/Forge/tests/: BuildModelTests.cpp  BuildPlanTests.cpp  BuildReportTests.cpp  BuildSchedulerTests.cpp  DiagnosticCollectorTests.cpp  ExitCodeTests.cpp  FakeGateTool.cpp  ToolGateTests.cpp
Tools/Forge/tool/: CHANGELOG.md  CMakeLists.txt  README.md  build.cmd  build.py
Tools/Forge/tool/.github/workflows/: ci.yml
Tools/Forge/tool/include/Forge/: BuildModel.h  BuildScheduler.h  CMakeAdapter.h  EnvProbe.h  Hardware.h  Manifest.h  ProcessRunner.h  ToolEnv.h
Tools/Forge/tool/src/: BuildModel.cpp  BuildScheduler.cpp  CMakeAdapter.cpp  ConanAdapter.cpp  Hardware.cpp  Manifest.cpp  ProcessRunner.cpp  main.cpp
Tools/Prism/examples/minimal/: CMakeLists.txt
Tools/Prism/examples/minimal/src/: SampleComponent.cpp
Tools/Prism/extractor/: CMakeLists.txt
Tools/Prism/extractor/src/: Record.h  main.cpp
Tools/Prism/extractor/src/AST/: DeclExtractor.cpp  DeclExtractor.h  RelationshipCollector.cpp  RelationshipCollector.h  SymbolVisitor.cpp  SymbolVisitor.h
Tools/Prism/extractor/src/Pipeline/: PrismAction.cpp  PrismAction.h  PrismConsumer.cpp  PrismConsumer.h
Tools/Prism/extractor/src/Support/: CommentParser.cpp  CommentParser.h  IdGen.cpp  IdGen.h  PathUtils.cpp  PathUtils.h
Tools/SagaTools/: CMakeLists.txt  Cargo.toml  README.md  SAGATOOLS_ROADMAP.md  setup.cmd  setup.py
Tools/SagaTools/config/: tools.registry.json
Tools/SagaTools/include/SagaTools/: Encoding.h  ProcessRunner.h  Registry.h  Resolver.h
Tools/SagaTools/src/: Encoding.cpp  ProcessRunner.cpp  Registry.cpp  Resolver.cpp  lib.rs  main.cpp  main.rs  registry.rs  resolver.rs  runner.rs
Tools/SagaTools/tests/: run_contract_tests.sh  run_parity_tests.sh
Tools/SagaTools/tests/fixtures/: tools.registry.json
Tools/SagaTools/tests/fixtures/golden/: list_output.txt  which_forge.txt  which_missing.txt
Tools/SystemDefinitionEngine/: .gitignore  CHANGELOG.md  CMakeLists.txt  LICENSE  README.md  SDE_ROADMAP.md  build.py  conanfile.py  version.json
Tools/SystemDefinitionEngine/cli/: main.cpp
Tools/SystemDefinitionEngine/cmake/: SDEConfig.cmake.in
Tools/SystemDefinitionEngine/include/SDE/Artifacts/: ArtifactManifest.h  ArtifactReader.h
Tools/SystemDefinitionEngine/include/SDE/Compilation/: CompiledModelGraph.h  ModelCompiler.h  ReferenceResolver.h
Tools/SystemDefinitionEngine/include/SDE/Compiler/: CompileContext.h  CompileRequest.h  CompileResult.h  CompilerFacade.h  CompilerSession.h  DependencyManifest.h
Tools/SystemDefinitionEngine/include/SDE/Core/: Cancellation.h  StableHash.h  Version.h
Tools/SystemDefinitionEngine/include/SDE/Diagnostics/: Diagnostic.h  DiagnosticCode.h  DiagnosticSeverity.h
Tools/SystemDefinitionEngine/include/SDE/IO/: JsonModelLoader.h  ModelLoader.h  ModelWriter.h
Tools/SystemDefinitionEngine/include/SDE/Model/: EnumDefinition.h  EnumRegistry.h  FieldDefinition.h  ModelDefinition.h  Relation.h  TypeNode.h
Tools/SystemDefinitionEngine/include/SDE/Validation/: CompileState.h  Diagnostic.h  Predicate.h  Rule.h  ValidationResult.h  Validator.h
Tools/SystemDefinitionEngine/src/SDE/Artifacts/: ArtifactReader.cpp
Tools/SystemDefinitionEngine/src/SDE/Compilation/: CompiledModelGraph.cpp  ModelCompiler.cpp  ReferenceResolver.cpp
Tools/SystemDefinitionEngine/src/SDE/Compiler/: CompilerFacade.cpp  CompilerSession.cpp
Tools/SystemDefinitionEngine/src/SDE/Core/: Cancellation.cpp  StableHash.cpp  Version.cpp
Tools/SystemDefinitionEngine/tests/Compilation/: ModelCompilerTests.cpp  ReferenceResolverTests.cpp
Tools/SystemDefinitionEngine/tests/Compiler/: CompilerSessionTests.cpp
Tools/SystemDefinitionEngine/tests/IO/: JsonModelLoaderTests.cpp  RawValueTests.cpp
Tools/SystemDefinitionEngine/tests/Integration/: FullPipelineTests.cpp
Tools/SystemDefinitionEngine/tests/Model/: TypeRegistryTests.cpp
Tools/SystemDefinitionEngine/tests/Validation/: CompileStateTests.cpp  DiagnosticTests.cpp  EnumValidationTests.cpp  RangeRuleTests.cpp  RefIntegrityRuleTests.cpp
(+3163 files in other folders)
